LIST OF CHANGES
---------------

release 55.0.1
 - bug fix for invocation of the generate() function in the
   seq_alignment function module following an addition of the
   generate_composition function

release 55.0
 - additional 'GnT MDA' library type added to allowed types for gbs analysis
 - a new archival pipeline function, cache_merge_component, for caching merge
   candidates as a part of the archival pipeline
 - no overwriting existing tileviz files when scaffolding teh runfolder
 - a new function, generate_compositions, for generating composition JSON files
 - npg_run_is_deletable:
    cross-checks for all file archival destinations to ensure that each
      product is archived in at least one destination;
    full logic for validating correctness of s3 archival

release 54.1.2
 - set explicit umask for wr jobs to guarantee that output is group-writable

release 54.1.1
 - bug fix in command generation for iRODS data archival from old-style
   run folders

release 54.1
 - minor speed-up in seq_alignment function due to caching of
   unseccessfully retrieved references
 - npg_run_is_deletable understands per-product iRODS collections and
   make runs that have products archivable to s3 not deletable
 - function for saving fastqcheck files is removed from the archival
   pipeline function graph, implementation of this function is deleted
 - changes of p4_stage1 and seq_alignment functions to accommodate
   removal of fastqcheck files generation in respective p4 templates

release 54.0
 - archival function graph includes publishing both to s3 and iRODS
 - a function graph for post 'run archived' small pipeline
 - no_s3_archival flag to switch off archival to s3 and notification by
   a message, false by default, is automatically sey to true if the 
   local flag is set to true
 - per-product restart file for iRODS publisher
 - function definition for a job to wait to move from the analysis
   to the outgoing directory